# ffpdf

./: .gitignore  LICENSE  README.md  comm_filename_format.py  comm_pdf_commands.py  comm_pdf_merge.py  comm_pdf_slicer.py  post_install.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  uninstall.bat  uninstall.py  uninstall.sh
data/: commands.bat  strings.py  utils.py
pdf_commands/: __main__.py  comm_filename_format.py  comm_pdf_commands.py  comm_pdf_merge.py  comm_pdf_slicer.py
pdf_commands/data/: strings.py  utils.py
src/ffpdf/: __main__.py  cli.py  comm_compress_img.py  comm_compress_vid.py  comm_convert.py  comm_count.py  comm_dimensions.py  comm_extensions.py  comm_format.py  comm_img.py  comm_merge.py  comm_slice.py  comm_vid.py
src/ffpdf/data/: strings.py  utils.py
